# fly_adxl345_firmware

./: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
